[package]
name = "arguably"
version = "2.0.0-alpha.1"
authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dmulholl/arguably"
homepage = "http://www.dmulholl.com/dev/arguably.html"
description = "A minimalist argument-parsing library."

