[package]
name = "arguably"
version = "2.1.1"
authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
edition = "2018"
license = "0BSD"
repository = "https://github.com/dmulholl/arguably"
homepage = "http://www.dmulholl.com/dev/arguably.html"
description = "A ridiculously simple argument-parsing library."
readme = "readme.md"

